2023-04-27
    - Removing Ntfy and Email plugin (they are separate packages)
    - Removing experimental blogic and solid code (need to be separate packages)
  
2023-04-27 0.2.8
    - Exporting all Executor and Extractor functions
    - Simplifying the README
    
2023-04-26 0.2.7
    - Fixing error output
    
2023-04-25 
    - Processing the main store only one time and passing it to all policy executors
    
2023-04-21 0.2.6
    - Fixing contentType bug in sendNotification
    
2023-04-19 0.2.5
    - Fixing dist output
    - Adding npm batch
  
2023-04-19 0.2.4
    - Fixing reasoner state bug
  
2023-04-13 0.2.3
    - Fixing dependencies
    - Adding support for multiple mainSubjects
    - Fixing documentation
  
2023-04-05 0.2.2
    - Adding more tunable DemoPlugin with friendly text output
  
2023-04-03 0.2.1
    - Adding components/ and dist/ to npm version

2023-03-30 0.2.0
    - Refactoring of the code
    - Replacing all JSON configuration files by Component.JS JSON-LD
    - Replaced bash orch and pol commands by a Javascript version
    - All Koreografeye commands can now be run as npx commands
    - Supporting external plugins via Components.JS

2023-02-06
    - Initial release 0.1.0