@@ -11,6 +11,7 @@
   "scripts": {
     "orch": "node dist/orch.js --info --keep --in in --out out --err err rules/demo/*.n3",
     "orch:demo": "node dist/orch.js --info --single data/demo.ttl --keep --out out rules/demo/00_demo.n3",
+    "orch:multiple": "node dist/orch.js --info --single data/demo.ttl --keep --out out rules/demo/00_demo_multiple.n3",
     "orch:debug": "node dist/orch.js --info --single data/demo.ttl --keep --out out rules/demo/00_debug.n3",
     "orch:ldn": "node dist/orch.js --info --single data/demo.ttl --keep --out out rules/demo/00_sendNotification.n3",
     "pol": "node dist/pol.js --info --keep --in out",
@@ -35,7 +36,7 @@
     "@comunica/query-sparql-rdfjs": "^2.5.1",
     "commander": "^9.4.1",
     "componentsjs": "^5.3.2",
-    "eyereasoner": "^2.0.0",
+    "eyereasoner": "4.21.7",
     "is-hidden-file": "^1.1.2",
     "jsonld": "^8.1.0",
     "log4js": "^6.7.0",
@@ -49,6 +50,8 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@rdfjs/types": "^1.1.0",
+    "@types/emscripten": "^1.39.6",
     "@types/glob": "^8.1.0",
     "@types/jsonld": "^1.5.8",
     "@types/n3": "^1.10.4",
@@ -56,6 +59,6 @@
     "@types/tmp": "^0.2.3",
     "componentsjs-generator": "^3.1.0",
     "tsconfig.json": "^1.0.11",
-    "typescript": "^4.9.3"
+    "typescript": "^5.0.4"
   }
 }
