@@ -1,3 +1,7 @@
+2023-05-11
+    - Adding support for an sh:order execution order in the plugins
+    - Refactoring policy extractor logging messages
+  
 2023-04-27
     - Removing Ntfy and Email plugin (they are separate packages)
     - Removing experimental blogic and solid code (need to be separate packages)
